--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,11 +3,41 @@
   font-family: Ubuntu, sans-serif;
 }
 
-html,
-body {
-  height: 100%;
+/* body {
   padding: 0;
   margin: 0;
+} */
+
+#map,
+body,
+html {
+  height: 500px;
+}
+
+.container {
+  background-color: #838f81;
+}
+
+.container-fluid {
+  padding: 0;
+}
+
+#borderDemo {
+  border: 4mm ridge rgba(72, 114, 38, 0.6);
+  }
+
+.navbar-brand {
+  height: 100px;
+  width: 35px;
+  position: top;
+}
+
+#hiking {
+    white-space: nowrap;
+}
+
+.hiking-table {
+  background-color: blue
 }
 
 /* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
@@ -16,17 +46,18 @@ body {
   min-height: 100%;
   padding-bottom: 130px;
   overflow: auto;
+  background-color: #838f81;
 }
 
 /* The footer is positioned at the bottom of the page */
-.footer {
+/* .footer {
   position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
   min-height: 100px;
   background: #4e5d6c;
-}
+} */
 
 /* The code styles the text at the bottom of the footer */
 .footer > .bottom {
@@ -35,7 +66,7 @@ body {
   bottom: 0;
   left: 0;
   padding: 5px;
-  background: #838f81;
+  background: gainsboro;
 }
 
 .navbar {
@@ -44,7 +75,7 @@ body {
 }
 
 /* This CSS styles the ufo icon in the navbar */
-.nav-ufo {
+.nav-hiking {
   position: absolute;
   bottom: 5px;
   left: 150px;
@@ -222,4 +253,19 @@ select {
   to {
     opacity: 1;
   }
+}
+
+
+
+
+
+
+/* Additional Library - simplyScroll */
+
+/* Container DIV - automatically generated */
+.simply-scroll-list { 
+	overflow: hidden;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
